--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -14,3 +14,12 @@ user added Chicken Burger from Table1 [4/17/2023 00:28:42]
 user added Caesar Salad from Table1 [4/17/2023 00:28:42]
 user added Caesar Salad from Table1 [4/17/2023 00:28:42]
 user added Caesar Salad from Table1 [4/17/2023 00:28:43]
+user opened Table1 [4/17/2023 05:09:37]
+user added Chicken Burger from Table1 [4/17/2023 05:09:37]
+user removed Chicken Burger from Table1 [4/17/2023 05:09:39]
+user opened Table1 [4/17/2023 05:09:40]
+user added Caesar Salad from Table1 [4/17/2023 05:09:40]
+user removed Caesar Salad from Table1 [4/17/2023 05:09:42]
+user opened Table1 [4/17/2023 05:12:08]
+user added Spaghetti Bolognese from Table1 [4/17/2023 05:12:08]
+user removed Spaghetti Bolognese from Table1 [4/17/2023 05:12:13]
