Updated user view design

--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -23,3 +23,31 @@ user removed Caesar Salad from Table1 [4/17/2023 05:09:42]
 user opened Table1 [4/17/2023 05:12:08]
 user added Spaghetti Bolognese from Table1 [4/17/2023 05:12:08]
 user removed Spaghetti Bolognese from Table1 [4/17/2023 05:12:13]
+user opened Table1 [4/17/2023 05:25:49]
+user added Chicken Burger from Table1 [4/17/2023 05:25:49]
+user added Caesar Salad from Table1 [4/17/2023 05:25:51]
+user added Margherita Pizza from Table1 [4/17/2023 05:25:53]
+user added Fish and Chips from Table1 [4/17/2023 05:25:55]
+user added Pepperoni Pizza from Table1 [4/17/2023 05:25:57]
+user added Pad Thai from Table1 [4/17/2023 05:25:59]
+user added Pad Thai from Table1 [4/17/2023 05:25:59]
+user added Pad Thai from Table1 [4/17/2023 05:25:59]
+user added Pad Thai from Table1 [4/17/2023 05:25:59]
+user added Pad Thai from Table1 [4/17/2023 05:26:00]
+user added Pad Thai from Table1 [4/17/2023 05:26:02]
+user removed Margherita Pizza from Table1 [4/17/2023 05:26:07]
+user removed Fish and Chips from Table1 [4/17/2023 05:26:07]
+user removed Pepperoni Pizza from Table1 [4/17/2023 05:26:07]
+user removed Pad Thai from Table1 [4/17/2023 05:26:07]
+user removed Pad Thai from Table1 [4/17/2023 05:26:08]
+user removed Pad Thai from Table1 [4/17/2023 05:26:08]
+user removed Pad Thai from Table1 [4/17/2023 05:26:08]
+user removed Pad Thai from Table1 [4/17/2023 05:26:08]
+user removed Pad Thai from Table1 [4/17/2023 05:26:09]
+user removed Caesar Salad from Table1 [4/17/2023 05:26:10]
+user removed Chicken Burger from Table1 [4/17/2023 05:26:11]
+user opened Table1 [4/17/2023 05:26:20]
+user added Chicken Burger from Table1 [4/17/2023 05:26:20]
+user added Caesar Salad from Table1 [4/17/2023 05:26:22]
+user removed Chicken Burger from Table1 [4/17/2023 05:26:25]
+user removed Caesar Salad from Table1 [4/17/2023 05:26:25]
