Updated view design

--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -51,3 +51,73 @@ user added Chicken Burger from Table1 [4/17/2023 05:26:20]
 user added Caesar Salad from Table1 [4/17/2023 05:26:22]
 user removed Chicken Burger from Table1 [4/17/2023 05:26:25]
 user removed Caesar Salad from Table1 [4/17/2023 05:26:25]
+user opened Table1 [4/17/2023 13:16:20]
+user added Chicken Burger from Table1 [4/17/2023 13:16:20]
+user added Caesar Salad from Table1 [4/17/2023 13:16:22]
+user added Margherita Pizza from Table1 [4/17/2023 13:16:23]
+user added Fish and Chips from Table1 [4/17/2023 13:16:25]
+user opened Table1 [4/17/2023 13:25:18]
+user added Chicken Burger from Table1 [4/17/2023 13:25:18]
+user opened Table1 [4/18/2023 01:06:55]
+user added Chicken Burger from Table1 [4/18/2023 01:06:55]
+user added Chicken Burger from Table1 [4/18/2023 01:06:57]
+user added Caesar Salad from Table1 [4/18/2023 01:06:59]
+user added Margherita Pizza from Table1 [4/18/2023 01:07:01]
+user added Grilled Cheese Sandwich from Table1 [4/18/2023 01:07:04]
+user added Grilled Cheese Sandwich from Table1 [4/18/2023 01:07:09]
+user added Grilled Cheese Sandwich from Table1 [4/18/2023 01:07:10]
+user opened Table1 [4/18/2023 01:08:58]
+user added Chicken Burger from Table1 [4/18/2023 01:08:58]
+user added Chicken Burger from Table1 [4/18/2023 01:09:00]
+user added Caesar Salad from Table1 [4/18/2023 01:09:02]
+user removed Caesar Salad from Table1 [4/18/2023 01:09:45]
+user added Chicken Burger from Table1 [4/18/2023 01:09:47]
+user added Caesar Salad from Table1 [4/18/2023 01:09:52]
+user removed Chicken Burger from Table1 [4/18/2023 01:20:54]
+user removed Chicken Burger from Table1 [4/18/2023 01:24:19]
+user added Chicken Burger from Table1 [4/18/2023 01:24:21]
+user added Chicken Burger from Table1 [4/18/2023 01:24:22]
+user added Chicken Burger from Table1 [4/18/2023 01:24:23]
+user removed Chicken Burger from Table1 [4/18/2023 01:24:24]
+user removed Caesar Salad from Table1 [4/18/2023 01:24:25]
+user removed Chicken Burger from Table1 [4/18/2023 01:24:26]
+user removed Chicken Burger from Table1 [4/18/2023 01:24:27]
+user removed Chicken Burger from Table1 [4/18/2023 01:24:52]
+user opened Table1 [4/18/2023 01:24:53]
+user added Chicken Burger from Table1 [4/18/2023 01:24:53]
+user added Chicken Burger from Table1 [4/18/2023 01:24:54]
+user added Chicken Burger from Table1 [4/18/2023 01:24:54]
+user added Chicken Burger from Table1 [4/18/2023 01:24:55]
+user added Chicken Burger from Table1 [4/18/2023 01:24:55]
+user added Caesar Salad from Table1 [4/18/2023 01:25:19]
+user added Margherita Pizza from Table1 [4/18/2023 01:25:20]
+user added Grilled Cheese Sandwich from Table1 [4/18/2023 01:25:25]
+user removed Chicken Burger from Table1 [4/18/2023 01:27:38]
+user removed Chicken Burger from Table1 [4/18/2023 01:27:39]
+user removed Chicken Burger from Table1 [4/18/2023 01:27:40]
+user removed Chicken Burger from Table1 [4/18/2023 01:27:41]
+user removed Chicken Burger from Table1 [4/18/2023 01:27:41]
+user removed Caesar Salad from Table1 [4/18/2023 01:27:41]
+user added Sushi Roll from Table1 [4/18/2023 01:27:48]
+user removed Grilled Cheese Sandwich from Table1 [4/18/2023 01:27:57]
+user removed Sushi Roll from Table1 [4/18/2023 01:27:58]
+user added Spaghetti Bolognese from Table1 [4/18/2023 01:28:00]
+user removed Spaghetti Bolognese from Table1 [4/18/2023 01:28:02]
+user removed Margherita Pizza from Table1 [4/18/2023 01:28:04]
+user opened Table1 [4/18/2023 01:29:59]
+user added Chicken Burger from Table1 [4/18/2023 01:29:59]
+user added Caesar Salad from Table1 [4/18/2023 01:30:00]
+user added Margherita Pizza from Table1 [4/18/2023 01:30:01]
+user added Fish and Chips from Table1 [4/18/2023 01:30:02]
+user added Pepperoni Pizza from Table1 [4/18/2023 01:30:03]
+user added Pepperoni Pizza from Table1 [4/18/2023 01:30:03]
+user added Pepperoni Pizza from Table1 [4/18/2023 01:30:04]
+user added Pepperoni Pizza from Table1 [4/18/2023 01:30:04]
+user added Pad Thai from Table1 [4/18/2023 01:30:05]
+user added Pad Thai from Table1 [4/18/2023 01:30:05]
+user added Grilled Cheese Sandwich from Table1 [4/18/2023 01:30:06]
+user added Spaghetti Bolognese from Table1 [4/18/2023 01:30:07]
+user added Buffalo Wings from Table1 [4/18/2023 01:30:08]
+user added Sushi Roll from Table1 [4/18/2023 01:30:10]
+user added Sushi Roll from Table1 [4/18/2023 01:30:11]
+user added Sushi Roll from Table1 [4/18/2023 01:30:11]
