Updated all view pages design

--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -121,3 +121,10 @@ user added Buffalo Wings from Table1 [4/18/2023 01:30:08]
 user added Sushi Roll from Table1 [4/18/2023 01:30:10]
 user added Sushi Roll from Table1 [4/18/2023 01:30:11]
 user added Sushi Roll from Table1 [4/18/2023 01:30:11]
+user opened Table1 [4/18/2023 04:52:31]
+user added Chicken Burger from Table1 [4/18/2023 04:52:31]
+user added Chicken Burger from Table1 [4/18/2023 04:52:31]
+user added Caesar Salad from Table1 [4/18/2023 04:52:32]
+user added Caesar Salad from Table1 [4/18/2023 04:52:32]
+user added Margherita Pizza from Table1 [4/18/2023 04:52:33]
+user added Margherita Pizza from Table1 [4/18/2023 04:52:33]
