--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -128,3 +128,14 @@ user added Caesar Salad from Table1 [4/18/2023 04:52:32]
 user added Caesar Salad from Table1 [4/18/2023 04:52:32]
 user added Margherita Pizza from Table1 [4/18/2023 04:52:33]
 user added Margherita Pizza from Table1 [4/18/2023 04:52:33]
+user opened Table1 [6/19/2023 14:17:16]
+user added Chicken Burger from Table1 [6/19/2023 14:17:16]
+user added Caesar Salad from Table1 [6/19/2023 14:17:17]
+user added Caesar Salad from Table1 [6/19/2023 14:17:18]
+user added Margherita Pizza from Table1 [6/19/2023 14:17:19]
+user opened Table1 [7/14/2023 22:36:29]
+user added Chicken Burger from Table1 [7/14/2023 22:36:29]
+user added Caesar Salad from Table1 [7/14/2023 22:36:30]
+user added Margherita Pizza from Table1 [7/14/2023 22:36:30]
+user added Fish and Chips from Table1 [7/14/2023 22:36:32]
+user added Pepperoni Pizza from Table1 [7/14/2023 22:36:32]
