--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -139,3 +139,12 @@ user added Caesar Salad from Table1 [7/14/2023 22:36:30]
 user added Margherita Pizza from Table1 [7/14/2023 22:36:30]
 user added Fish and Chips from Table1 [7/14/2023 22:36:32]
 user added Pepperoni Pizza from Table1 [7/14/2023 22:36:32]
+user opened Table1 [10/25/2023 13:31:44]
+user added Chicken Burger from Table1 [10/25/2023 13:31:44]
+user added Chicken Burger from Table1 [10/25/2023 13:31:44]
+user added Chicken Burger from Table1 [10/25/2023 13:31:44]
+user added Chicken Burger from Table1 [10/25/2023 13:31:44]
+user added Chicken Burger from Table1 [10/25/2023 13:31:44]
+user added Caesar Salad from Table1 [10/25/2023 13:31:45]
+user added Caesar Salad from Table1 [10/25/2023 13:31:46]
+user added Caesar Salad from Table1 [10/25/2023 13:31:46]
