--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -148,3 +148,37 @@ user added Chicken Burger from Table1 [10/25/2023 13:31:44]
 user added Caesar Salad from Table1 [10/25/2023 13:31:45]
 user added Caesar Salad from Table1 [10/25/2023 13:31:46]
 user added Caesar Salad from Table1 [10/25/2023 13:31:46]
+user opened Table1 [10/27/2023 14:12:36]
+user added Chicken Burger from Table1 [10/27/2023 14:12:36]
+user added Caesar Salad from Table1 [10/27/2023 14:12:36]
+user added Margherita Pizza from Table1 [10/27/2023 14:12:38]
+user added Fish and Chips from Table1 [10/27/2023 14:12:38]
+user added Pepperoni Pizza from Table1 [10/27/2023 14:12:39]
+user added Pepperoni Pizza from Table1 [10/27/2023 14:12:39]
+user added Pad Thai from Table1 [10/27/2023 14:12:40]
+user added Pad Thai from Table1 [10/27/2023 14:12:41]
+user removed Pepperoni Pizza from Table1 [10/27/2023 16:04:42]
+user removed Chicken Burger from Table1 [10/27/2023 16:05:59]
+user removed Caesar Salad from Table1 [10/27/2023 16:06:00]
+user removed Margherita Pizza from Table1 [10/27/2023 16:22:39]
+user removed Fish and Chips from Table1 [10/27/2023 16:22:39]
+user removed Pepperoni Pizza from Table1 [10/27/2023 16:22:40]
+user removed Pad Thai from Table1 [10/27/2023 16:22:41]
+user removed Pad Thai from Table1 [10/27/2023 16:22:42]
+user opened Table1 [10/27/2023 16:22:47]
+user added Margherita Pizza from Table1 [10/27/2023 16:22:47]
+user opened Table3 [10/27/2023 16:22:58]
+user added Chicken Burger from Table3 [10/27/2023 16:22:58]
+user added Chicken Burger from Table3 [10/27/2023 16:22:59]
+user opened Table1 [10/27/2023 16:28:28]
+user added Chicken Burger from Table1 [10/27/2023 16:28:28]
+user removed Chicken Burger from Table1 [10/27/2023 16:28:29]
+user opened Table1 [10/27/2023 16:28:30]
+user added Caesar Salad from Table1 [10/27/2023 16:28:30]
+user removed Caesar Salad from Table1 [10/27/2023 16:28:31]
+user opened Table1 [10/27/2023 16:28:32]
+user added Margherita Pizza from Table1 [10/27/2023 16:28:32]
+user opened Table1 [10/27/2023 16:30:05]
+user added Chicken Burger from Table1 [10/27/2023 16:30:05]
+user added Chicken Burger from Table1 [10/27/2023 16:30:05]
+user added Chicken Burger from Table1 [10/27/2023 16:30:05]
