Updated to Dark Theme and Loading window added

--- a/Rkeeper/Resources/History.txt
+++ b/Rkeeper/Resources/History.txt
@@ -190,3 +190,18 @@ user opened Table1 [11/26/2023 21:14:25]
 user added Spaghetti Bolognese from Table1 [11/26/2023 21:14:25]
 user added Buffalo Wings from Table1 [11/26/2023 21:14:26]
 user added Chicken Burger from Table1 [11/26/2023 21:14:38]
+user opened Table1 [12/2/2023 09:10:57]
+user added yeni yemey from Table1 [12/2/2023 09:10:57]
+user added yeni yemey from Table1 [12/2/2023 09:10:59]
+user removed yeni yemey from Table1 [12/2/2023 09:11:01]
+user removed yeni yemey from Table1 [12/2/2023 09:11:01]
+user opened Table1 [12/2/2023 09:11:10]
+user added yeni yemey from Table1 [12/2/2023 09:11:10]
+user removed yeni yemey from Table1 [12/2/2023 09:11:13]
+user opened Table1 [12/2/2023 20:04:06]
+user added Buffalo Wings from Table1 [12/2/2023 20:04:06]
+user opened Table1 [12/2/2023 20:33:09]
+user added Chicken Burger from Table1 [12/2/2023 20:33:09]
+user opened Table1 [12/2/2023 23:38:09]
+user added Chicken Burger from Table1 [12/2/2023 23:38:09]
+user added Chicken Burger from Table1 [12/2/2023 23:38:09]
